Ensure podium is visible when game is completed

--- a/src/components/GameModeSelect/index.scss
+++ b/src/components/GameModeSelect/index.scss
@@ -4,7 +4,7 @@
   padding: 1em;
 
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(9em, 1fr));
   grid-gap: 1em;
 }
 
