--- a/src/page/GameCompletedPage.scss
+++ b/src/page/GameCompletedPage.scss
@@ -8,7 +8,7 @@
   height: 60vh;
 
   margin: 0 auto;
-  max-width: 60rem;
+  max-width: 80rem;
   width: 100%;
 
   &__scores,
@@ -31,7 +31,7 @@
   }
 
   &__scores {
-    flex: 1;
+    flex: 8;
 
     overflow-y: scroll;
 
